tests/ui/typech/construct_struct_type_incomp.lm
struct A {
    pub foo: Boolean;
}

fn foo() {
    let a = A { foo: 0 };
}
